--- a/env.yaml
+++ b/env.yaml
@@ -1,6 +1,5 @@
-name: lang_ros
+name: ros
 channels:
-  - aihabitat
   - robostack-staging
   - conda-forge
   - defaults
@@ -12,34 +11,32 @@ dependencies:
   - aom=3.5.0=h27087fc_0
   - apr=1.7.0=hd590300_6
   - assimp=5.2.5=hf40c2ba_0
-  - atk-1.0=2.38.0=hd4edc92_1
+  - atk-1.0=2.38.0=h04ea711_2
   - attr=2.5.1=h166bdaf_1
-  - attrs=23.2.0=pyh71513ae_0
-  - bcrypt=4.1.3=py39ha68c5e3_0
+  - bcrypt=4.2.0=py39h5cde264_0
   - boost=1.78.0=py39hda80f44_5
   - boost-cpp=1.78.0=h5adbc97_2
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.19.1=h5eee18b_0
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.32.3=h4bc722e_0
   - ca-certificates=2024.7.4=hbcca054_0
   - cairo=1.16.0=ha61ee94_1014
   - catkin_pkg=1.0.0=pyhd8ed1ab_0
   - certifi=2024.7.4=pyhd8ed1ab_0
   - cffi=1.16.0=py39h7a31438_0
-  - cmake=3.14.0=h52cb24c_0
-  - colorama=0.4.6=pyhd8ed1ab_0
+  - cmake=3.26.3=h077f3f9_0
   - console_bridge=1.0.2=h924138e_1
   - contourpy=1.2.1=py39h7633fee_0
   - cryptography=42.0.2=py39he6105cc_0
   - cycler=0.12.1=pyhd8ed1ab_0
-  - dbus=1.13.18=hb2f20db_0
+  - dbus=1.13.6=h5008d03_3
   - defusedxml=0.7.1=pyhd8ed1ab_0
   - distro=1.9.0=pyhd8ed1ab_0
   - docutils=0.21.2=pyhd8ed1ab_0
   - eigen=3.4.0=h00ab1b0_0
   - empy=3.3.4=pyh9f0ad1d_1
-  - expat=2.6.2=h6a678d5_0
+  - expat=2.6.2=h59595ed_0
   - ffmpeg=5.1.2=gpl_h8dda1f0_106
   - fftw=3.3.10=nompi_hf1063bd_110
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
@@ -51,17 +48,15 @@ dependencies:
   - fonts-conda-forge=1=0
   - fonttools=4.53.1=py39hcd6043d_0
   - freeglut=3.2.2=h9c3ff4c_1
-  - freeimage=3.18.0=hf18588b_9
-  - freetype=2.12.1=h4a9f257_0
+  - freeimage=3.18.0=hca5c823_12
+  - freetype=2.12.1=h267a509_2
   - fribidi=1.0.10=h36c2ea0_0
-  - gdk-pixbuf=2.42.8=hff1cb4f_1
+  - gdk-pixbuf=2.42.10=h05c8ddd_0
   - gettext=0.22.5=h59595ed_2
   - gettext-tools=0.22.5=h59595ed_2
   - giflib=5.2.2=hd590300_0
-  - gitdb=4.0.11=pyhd8ed1ab_0
-  - gitpython=3.1.43=pyhd8ed1ab_0
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
+  - glib=2.80.2=hf974151_0
+  - glib-tools=2.80.2=hb6ce0ca_0
   - gmock=1.15.0=ha770c72_0
   - gmp=6.3.0=hac33072_2
   - gnutls=3.7.9=hb077bed_0
@@ -70,29 +65,26 @@ dependencies:
   - graphviz=6.0.2=h99bc08f_0
   - gst-plugins-base=1.22.0=h4243ec0_2
   - gstreamer=1.22.0=h25f0c4b_2
-  - gstreamer-orc=0.4.38=hd590300_0
+  - gstreamer-orc=0.4.39=h4bc722e_0
   - gtest=1.15.0=h434a139_0
   - gtk2=2.24.33=h90689f9_2
   - gts=0.7.6=h977cf35_4
-  - habitat-sim-mutex=1.0=display_bullet
   - harfbuzz=6.0.0=h8e241bc_0
   - hdf5=1.12.2=nompi_h4df4325_101
   - hicolor-icon-theme=0.17=ha770c72_2
   - icu=70.1=h27087fc_0
-  - imageio=2.34.2=pyh12aca89_0
-  - imageio-ffmpeg=0.5.1=pyhd8ed1ab_0
   - imath=3.1.6=h6239696_1
   - importlib-resources=6.4.0=pyhd8ed1ab_0
   - importlib_resources=6.4.0=pyhd8ed1ab_0
   - jack=1.9.22=h11f4161_0
   - jasper=2.0.33=h0ff4b12_1
-  - jbig=2.1=h7f98852_2003
   - jpeg=9e=h0b41bf4_3
   - jxrlib=1.1=hd590300_3
+  - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py39h7633fee_1
-  - krb5=1.20.1=h143b758_1
+  - krb5=1.20.1=h81ceb04_0
   - lame=3.100=h166bdaf_1003
-  - lcms2=2.12=hddcbb42_0
+  - lcms2=2.15=hfd0df8a_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=4.0.0=h27087fc_0
   - libaec=1.1.3=h59595ed_0
@@ -102,65 +94,65 @@ dependencies:
   - libasprintf=0.22.5=h661eb56_2
   - libasprintf-devel=0.22.5=h661eb56_2
   - libassuan=2.5.7=h59595ed_0
-  - libblas=3.9.0=22_linux64_openblas
+  - libblas=3.9.0=23_linux64_openblas
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
   - libcap=2.67=he9d0100_0
-  - libcblas=3.9.0=22_linux64_openblas
+  - libcblas=3.9.0=23_linux64_openblas
   - libclang=15.0.7=default_h127d8a8_5
   - libclang13=15.0.7=default_h5d6823c_5
   - libcups=2.3.3=h36d4200_3
   - libcurl=7.88.1=hdc1c0ab_1
   - libdb=6.2.32=h9c3ff4c_0
-  - libdeflate=1.14=h166bdaf_0
+  - libdeflate=1.17=h0b41bf4_0
   - libdrm=2.4.122=h4ab18f5_0
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
   - libevent=2.1.10=h28343ad_4
   - libexpat=2.6.2=h59595ed_0
   - libffi=3.4.4=h6a678d5_1
   - libflac=1.4.3=h59595ed_0
   - libgcc-ng=14.1.0=h77fa898_0
-  - libgcrypt=1.11.0=h4ab18f5_0
-  - libgd=2.3.3=h18fbbfe_3
+  - libgcrypt=1.11.0=h4ab18f5_1
+  - libgd=2.3.3=h5aea950_4
   - libgettextpo=0.22.5=h59595ed_2
   - libgettextpo-devel=0.22.5=h59595ed_2
   - libgfortran-ng=14.1.0=h69a702a_0
   - libgfortran5=14.1.0=hc5f4f2c_0
-  - libglib=2.78.4=hdc74915_0
+  - libglib=2.80.2=hf974151_0
   - libglu=9.0.0=he1b5a44_1001
   - libgomp=14.1.0=h77fa898_0
   - libgpg-error=1.50=h4f305b6_0
   - libiconv=1.17=hd590300_2
   - libidn2=2.3.7=hd590300_0
-  - liblapack=3.9.0=22_linux64_openblas
-  - liblapacke=3.9.0=22_linux64_openblas
-  - libllvm14=14.0.6=hdb19cb5_3
+  - liblapack=3.9.0=23_linux64_openblas
+  - liblapacke=3.9.0=23_linux64_openblas
   - libllvm15=15.0.7=hadd5161_1
-  - libnghttp2=1.57.0=h2d74bed_0
+  - libnghttp2=1.58.0=h47da74e_0
   - libogg=1.3.5=h4ab18f5_0
   - libopenblas=0.3.27=pthreads_hac2b453_1
-  - libopencv=4.6.0=py39hbc3ed98_8
+  - libopencv=4.6.0=py39hb375605_9
   - libopus=1.3.1=h7f98852_1
   - libpciaccess=0.18=hd590300_0
-  - libpng=1.6.39=h5eee18b_0
+  - libpng=1.6.43=h2797004_0
   - libpq=15.3=hbcd7760_1
   - libprotobuf=3.21.12=hfc55251_2
-  - libraw=0.20.2=h10796ff_1
+  - libraw=0.21.1=h89bc310_0
   - librsvg=2.54.4=h7abd40a_0
   - libsndfile=1.2.2=hc60ed4a_1
   - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.46.0=hde9e2c9_0
-  - libssh2=1.11.0=h251f7ec_0
+  - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=14.1.0=hc0a3c3a_0
   - libsystemd0=253=h8c4010b_1
   - libtasn1=4.19.0=h166bdaf_0
-  - libtiff=4.4.0=h82bc61c_5
+  - libtiff=4.5.0=h6adf6a1_2
   - libtool=2.4.7=h27087fc_0
   - libudev1=253=h0b41bf4_1
   - libunistring=0.9.10=h7f98852_0
   - libuuid=2.38.1=h0b41bf4_0
+  - libuv=1.48.0=hd590300_0
   - libva=2.18.0=h0b41bf4_0
   - libvorbis=1.3.7=h9c3ff4c_0
   - libvpx=1.11.0=h9c3ff4c_3
@@ -171,15 +163,12 @@ dependencies:
   - libxkbcommon=1.5.0=h79f4944_1
   - libxml2=2.10.3=hca2bb57_4
   - libzlib=1.2.13=h4ab18f5_6
-  - llvmlite=0.43.0=py39h6a678d5_0
   - log4cxx=0.11.0=h1302424_4
   - lz4=4.3.3=py39h79d96da_0
   - lz4-c=1.9.4=hcb278e6_0
-  - matplotlib=3.9.1=py39hf3d152e_0
   - matplotlib-base=3.9.1=py39hd75cb13_0
   - mpg123=1.32.6=h59595ed_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql=5.7.20=hf484d3e_1001
   - mysql-common=8.0.33=hf1915f5_6
   - mysql-libs=8.0.33=hca2cd23_6
   - ncurses=6.4=h6a678d5_0
@@ -188,21 +177,19 @@ dependencies:
   - nose=1.3.7=py_1006
   - nspr=4.35=h27087fc_0
   - nss=3.100=hca3bf56_0
-  - numba=0.60.0=py39h0320e7d_0
   - numpy=1.26.4=py39h474f0d3_0
   - ogre=1.10.12=h7cc4a1d_10
-  - olefile=0.47=pyhd8ed1ab_0
   - openexr=3.1.5=h0cdce71_2
   - openh264=2.3.1=hcb278e6_2
-  - openjpeg=2.4.0=hb52868f_1
+  - openjpeg=2.5.0=hfec8fc6_2
   - openssl=3.1.6=h4ab18f5_0
   - orocos-kdl=1.5.1=h59595ed_5
   - p11-kit=0.24.1=hc5aa10d_0
   - packaging=24.1=pyhd8ed1ab_0
   - pango=1.50.14=hd33c08f_0
   - paramiko=3.4.0=pyhd8ed1ab_0
-  - pcre2=10.42=hebb0a14_1
-  - pillow=9.2.0=py39hae2aec6_1
+  - pcre2=10.43=hcad00b1_0
+  - pillow=9.4.0=py39h2320bf1_1
   - pip=24.0=py39h06a4308_0
   - pixman=0.43.2=h59595ed_0
   - pkg-config=0.29.2=h4bc722e_1009
@@ -214,7 +201,7 @@ dependencies:
   - pulseaudio=16.1=hcb278e6_3
   - pulseaudio-client=16.1=h5195f5e_3
   - pulseaudio-daemon=16.1=ha8d29e2_3
-  - py-opencv=4.6.0=py39hcca971b_8
+  - py-opencv=4.6.0=py39hcca971b_9
   - pybind11=2.13.1=py39h95fdab5_0
   - pybind11-global=2.13.1=py39h95fdab5_0
   - pycairo=1.25.0=py39hc92de75_1
@@ -238,9 +225,8 @@ dependencies:
   - qhull=2020.2=h434a139_5
   - qt-main=5.15.8=h5d23da1_6
   - qt-webengine=5.15.8=h77d6d84_0
-  - quaternion=2023.0.4=py39hf15bc26_0
   - readline=8.2=h5eee18b_0
-  - rhash=1.4.3=hdbd6064_0
+  - rhash=1.4.3=hd590300_2
   - ros-distro-mutex=0.4.0=noetic
   - ros-noetic-actionlib=1.14.0=py39h873cbd0_16
   - ros-noetic-actionlib-msgs=1.13.1=py39hac30774_15
@@ -430,30 +416,25 @@ dependencies:
   - rosdep=0.24.0=pyhd8ed1ab_0
   - rosdistro=0.9.0=py39hf3d152e_1
   - rospkg=1.5.1=pyhd8ed1ab_0
-  - sbcl=2.2.11=ha66036c_5
-  - scipy=1.13.1=py39haf93ffa_0
+  - sbcl=2.4.5=h6f65a0c_8
   - sdl2=2.26.5=h949db6a_0
+  - setuptools=69.5.1=py39h06a4308_0
   - sip=6.7.12=py39h3d6467e_0
   - six=1.16.0=pyh6c4a22f_0
-  - smmap=3.0.5=pyh44b312d_0
   - sqlite=3.45.3=h5eee18b_0
   - svt-av1=1.4.1=hcb278e6_0
-  - swig=4.2.0=h1bc8f3f_1
+  - swig=4.2.1=hc9a1274_0
   - tinyxml=2.6.2=h4bd325d_2
   - tinyxml2=9.0.0=h9c3ff4c_2
   - tk=8.6.14=h39e8969_0
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - tornado=6.4.1=py39hd3abc70_0
-  - tqdm=4.66.4=pyhd8ed1ab_0
-  - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h04d1e81_0
   - unicodedata2=15.1.0=py39hd1e30aa_0
   - unixodbc=2.3.12=h661eb56_0
   - urdfdom=3.1.1=h8a9b4ce_0
   - urdfdom_headers=1.1.1=h00ab1b0_0
   - wheel=0.43.0=py39h06a4308_0
-  - withbullet=2.0=0
   - x264=1!164.3095=h166bdaf_2
   - x265=3.5=h924138e_3
   - xcb-util=0.4.0=h516909a_0
@@ -470,18 +451,14 @@ dependencies:
   - xorg-libx11=1.8.4=h0b41bf4_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxaw=1.0.14=h7f98852_1
-  - xorg-libxcursor=1.2.0=h0b41bf4_1
   - xorg-libxdmcp=1.1.3=h7f98852_0
   - xorg-libxext=1.3.4=h0b41bf4_2
   - xorg-libxfixes=5.0.3=h7f98852_1004
   - xorg-libxi=1.7.10=h7f98852_0
-  - xorg-libxinerama=1.1.5=h27087fc_0
   - xorg-libxmu=1.1.3=h7f98852_0
   - xorg-libxpm=3.5.16=hd590300_0
-  - xorg-libxrandr=1.5.2=h7f98852_1
   - xorg-libxrender=0.9.10=h7f98852_1003
   - xorg-libxt=1.3.0=hd590300_0
-  - xorg-randrproto=1.5.0=h7f98852_1001
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h7f98852_1007
@@ -490,25 +467,36 @@ dependencies:
   - yaml-cpp=0.7.0=h59595ed_3
   - zipp=3.19.2=pyhd8ed1ab_0
   - zlib=1.2.13=h4ab18f5_6
-  - zstd=1.5.5=hc292b87_2
+  - zstd=1.5.6=ha6fb4c9_0
   - zziplib=0.13.69=h27826a3_1
   - pip:
+      - antlr4-python3-runtime==4.9.3
+      - attrs==23.2.0
       - cloudpickle==3.0.0
       - filelock==3.15.4
       - fsspec==2024.6.1
-      - gym==0.26.2
+      - gitdb==4.0.11
+      - gitpython==3.1.43
+      - gym==0.23.0
       - gym-notices==0.0.8
-      - habitat-sim==0.2.4
-      - importlib-metadata==8.0.0
+      - habitat-sim==0.3.1
+      - hydra-core==1.3.2
+      - imageio==2.34.2
+      - imageio-ffmpeg==0.5.1
+      - importlib-metadata==8.2.0
       - jinja2==3.1.4
+      - llvmlite==0.43.0
+      - magnum==0.0.0
       - markupsafe==2.1.5
       - mpmath==1.3.0
       - networkx==3.2.1
+      - numba==0.60.0
+      - numpy-quaternion==2023.0.4
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvrtc-cu12==12.1.105
       - nvidia-cuda-runtime-cu12==12.1.105
-      - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cudnn-cu12==9.1.0.70
       - nvidia-cufft-cu12==11.0.2.54
       - nvidia-curand-cu12==10.3.2.106
       - nvidia-cusolver-cu12==11.4.5.107
@@ -516,10 +504,14 @@ dependencies:
       - nvidia-nccl-cu12==2.20.5
       - nvidia-nvjitlink-cu12==12.5.82
       - nvidia-nvtx-cu12==12.1.105
-      - pygame==2.6.0
-      - pytorch-mppi==0.4.2
-      - setuptools==67.6.1
+      - omegaconf==2.3.0
+      - scipy==1.13.1
+      - smmap==5.0.1
       - sympy==1.13.1
-      - torch==2.3.1
-      - triton==2.3.1
+      - torch==2.4.0
+      - torchaudio==2.4.0
+      - torchvision==0.19.0
+      - tqdm==4.66.4
+      - triton==3.0.0
+      - typing-extensions==4.12.2
 prefix: /home/zli133/anaconda3/envs/ros
