--- a/config/simulation_exps/mapping/mapping.json
+++ b/config/simulation_exps/mapping/mapping.json
@@ -2,17 +2,32 @@
   "exp_name": "mapping",
   "data_root": "/home/zli133/shared/data/habitat",
   "dataset_name": "hssd-hab",
-  "scene_name": "rug",
+  "scene_name": "rug_1",
   "platform": "simulator",
-  "initial_pose": [1.48, 36.90, -1.5],
+  "initial_pose": [
+    0.48,
+    36.90,
+    -1.5
+  ],
+  "goal": [
+    7,
+    0
+  ],
+  "vmin": 0.15,
+  "vmax": 1.8,
+  "wmax": 2.0,
   "dt": 0.01,
-  "goal": [4, 0.0],
-  "text_queries": ["stay away from the rug"],
-  "score_threshold": 0.1,
-  "results_path": "/home/zli133/shared/ml_projects/lang_reachability_ros/results/rtabmap_mppi_vlm_reachability",
-
+  "use_precomputed_brt": "False",
+  "brt_update_interval": 4,
+  "brt_convergence_epsilon": 0.01,
+  "brt_unsafe_level": 0.2,
   "tf_map_frame": "map",
   "tf_odom_frame": "odom",
   "tf_base_link_frame": "base_link",
-  "tf_camera_link_frame": "camera_link"
+  "tf_camera_link_frame": "camera_link",
+  "text_queries": [
+    "stay away from the rug"
+  ],
+  "score_threshold": 0.23,
+  "results_path": "/home/zli133/shared/ml_projects/backups/lang_reachability_ros/results/rtabmap_mppi_vlm_reachability"
 }
